<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Toolbar -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button_desc"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logoToolbar"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:src="@drawable/logo_toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/backButton"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/camp_image"
        android:layout_width="411dp"
        android:layout_height="192dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardContainer"
        app:srcCompat="@drawable/skouras_out" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/infoCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-32dp"
        app:shapeAppearance="@style/TopCornersRoundedCard"
        app:cardBackgroundColor="@color/color_surface"
        app:layout_constraintTop_toBottomOf="@id/camp_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvCampTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camp_name_placeholder"
                android:textColor="@color/color_on_surface"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Reviews -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4.5"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/tvReviewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/reviews_amount"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:drawablePadding="8dp"
                android:text="@string/selected_location"
                android:textColor="@color/color_on_surface"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/location_icon" />

            <TextView
                android:id="@+id/kepa_certified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:drawablePadding="8dp"
                android:text="@string/kepa_certified_instructors"
                android:textColor="@color/color_on_surface"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/check" />

            <TextView
                android:id="@+id/tvCampDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/camp_description_placeholder"
                android:textColor="@color/color_on_surface"
                android:textSize="16sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/infoCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/color_surface">

    <!-- Available Periods -->
    <TextView
        android:id="@+id/tvAvailablePeriods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_periods"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>