<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <!-- White card container with rounded corners -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="320dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Toolbar -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button_desc"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logoToolbar"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:src="@drawable/logo_toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/backButton"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_info"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/color_secondary"
            app:layout_constraintEnd_toEndOf="@id/logoToolbar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/logoToolbar"
            app:layout_constraintTop_toBottomOf="@+id/logoToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:drawableStart="@drawable/calendar"
                    android:drawablePadding="8dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/selected_time_period"
                    android:textColor="@color/color_background"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/camp_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:drawableStart="@drawable/location"
                    android:drawablePadding="8dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/selected_location"
                    android:textColor="@color/color_background"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/visitors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="8dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/selected_visitors"
                    android:textColor="@color/color_background"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_info">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filterBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/color_background"
                    android:text="@string/filter"
                    app:icon="@drawable/filter"
                    app:iconGravity="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_info" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sortingBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/color_on_secondary"
                    android:text="@string/filter"
                    android:textColor="@color/color_secondary"
                    app:icon="@drawable/sorting"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/color_secondary"
                    app:iconGravity="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_info" />

            </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
